--- a/gb/20/7/7/n12238605.md
+++ b/gb/20/7/7/n12238605.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/esmmnr3168/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/esmmnr3168/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/esmmnr3168/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/esmmnr3168/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/esmmnr3168/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/esmmnr3168/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/esmmnr3168/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/esmmnr3168/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/esmmnr3168/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/esmmnr3168/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/esmmnr3168/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/esmmnr3168/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/esmmnr3168/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/esmmnr3168/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/esmmnr3168/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/esmmnr3168/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/esmmnr3168/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/esmmnr3168/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/esmmnr3168/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/esmmnr3168/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/esmmnr3168/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/esmmnr3168/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/esmmnr3168/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/esmmnr3168/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>张丽善慰问汉光演习殉职士兵蔡博宇家属</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/07/7cd4e0f655ae01146396b58035a9e1be-600x400.jpg" />
 <h6>云林县长张丽善，7日上午一早特别率同民政处长张政国、社会处同仁等前往二崙乡酒姑村探访日前因汉光演习而殉职的志愿役上兵蔡博宇的父亲（廖素贞／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年07月07日讯】（大纪元记者廖素贞台湾云林报导）云林县长张丽善，7日上午一早特别率同民政处长张政国、社会处同仁等前往二崙乡酒姑村探访日前因<ahref="https://github.com/esmmnr3168/djy/blob/master/gb/tag/%E6%B1%89%E5%85%89%E6%BC%94%E4%B9%A0.md#1">汉光演习</a>而殉职的志愿役上兵蔡博宇的家属，并致赠慰问金！</p>
-<p>张丽善表示，对于蔡员仅26岁就不幸<ahref="https://github.com/esmmnr3168/djy/blob/master/gb/tag/%E5%9B%A0%E5%85%AC%E6%AE%89%E8%81%8C.md#1">因公殉职</a>，深感惋惜，对于家属的哀痛，感同身受与不舍，希望家属节哀，也指示役政及社福同仁尽力予以协助后续相关事宜。张丽善说，蔡父从农，母亲已逝，二位哥哥一从工一从农，另有一妹妹还在就学，家中经济状况并不好，吁请军方务必从宽抚恤。</p>
+<p>【大纪元2020年07月07日讯】（大纪元记者廖素贞台湾云林报导）云林县长张丽善，7日上午一早特别率同民政处长张政国、社会处同仁等前往二崙乡酒姑村探访日前因<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%B1%89%E5%85%89%E6%BC%94%E4%B9%A0.md#1">汉光演习</a>而殉职的志愿役上兵蔡博宇的家属，并致赠慰问金！</p>
+<p>张丽善表示，对于蔡员仅26岁就不幸<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%9B%A0%E5%85%AC%E6%AE%89%E8%81%8C.md#1">因公殉职</a>，深感惋惜，对于家属的哀痛，感同身受与不舍，希望家属节哀，也指示役政及社福同仁尽力予以协助后续相关事宜。张丽善说，蔡父从农，母亲已逝，二位哥哥一从工一从农，另有一妹妹还在就学，家中经济状况并不好，吁请军方务必从宽抚恤。</p>
 <p>针对这次的意外事件，张丽善也呼吁国防部要好好检讨，如果是天灾，那整个安全和配套措施都要做好，一旦发生意外要如何抢救？才不会造成下一次的意外！</p>
 <p>去年太太往生，今年又痛失爱子的蔡爸爸泣不成声的说，博宇很孝顺，每到星期假日，一定会回家，而且哪里也不去，整天陪着他，这么懂事的孩子，竟然说走就走了，到现在他都无法接受！</p>
-<figure id="attachment_12238608" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/07/dcf7449c697d6450e44704ce3d5ed507.jpg"><img class="wp-image-12238608 size-large" src="https://i.epochtimes.com/assets/uploads/2020/07/dcf7449c697d6450e44704ce3d5ed507-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">二崙乡民代表钟东荣前排（左二）希望国防部能从优抚恤蔡博宇的家属，让蔡父无后顾之忧。（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_12238608" aria-describedby="caption-attachment-12238608" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/dcf7449c697d6450e44704ce3d5ed507.jpg"><img class="wp-image-12238608 size-large" src="https://i.epochtimes.com/assets/uploads/2020/07/dcf7449c697d6450e44704ce3d5ed507-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12238608" class="wp-caption-text">二崙乡民代表钟东荣前排（左二）希望国防部能从优抚恤蔡博宇的家属，让蔡父无后顾之忧。（廖素贞／大纪元）</figcaption></figure>
 <p>二崙乡民代表钟东荣说，博宇是我从小看到大，非常乖巧的孩子，三个兄弟中他跟爸爸感情最好，对家庭很有责任感，妈妈过世后，只要一放假，他一定回来陪爸爸，这么好的青年为国捐躯，希望国军能从优抚恤，对于丧葬补助费不能领这部分，是否可以专案处理，因其父领有重大疾病卡，哥哥也有残障手册，是个经济弱势的家庭，希望国防部能从宽抚恤，让蔡父无后顾之忧！</p>
 <p>到场关心的云后备指挥部指挥官林鼎育表示，依规定丧葬补助费是要发给家属办理丧事用的，但因家属委托军方办理，所以家属就不能再领这笔补助费，与抚恤金没有关系，除了抚恤金外，蔡父每年还可以领到19万元的生活费，而且领终生！</p>
 <p>钟东荣说，博宇105年8月10日入伍，在军中表现优异，是同袍眼中的好同事，长官眼中的好部属，本来今年8月10日就可以退伍，但他又和军方签了约，如果没签，这次的演习就不会上场，也许就可以躲过这一劫！</p>
@@ -20,42 +20,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/19/8/30/n11487701.md#1">勇警薛定岳因公殉职 彰县长慰问双亲</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/1/2/n11762786.md#1">黑鹰直升机失事 台参谋总长等8人罹难</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/6/9/n12173011.md#1">汉光演习713登场 联合兵种营首度投入操演</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/6/30/n12220978.md#1">国军汉光演习将至 F-16挂弹 潜舰射鱼雷轰敌</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/3/n12229282.md#1">汉光预演 陆战队胶筏惊传翻覆 1失踪2急救</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/6/n12236230.md#1">台陆战队覆艇意外 严德发：不因风险降低训练标准</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/7/n12238511.md#1">科学168教育博览会 将缔造无限可能的科学乐园</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/7/n12237622.md#1">缅怀七七抗战  尊崇保国英雄</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/6/n12236207.md#1">县府携手农会户花农  云林故事馆 变花园王国</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/6/n12236078.md#1">因应多元阅读需求 屏东图书馆服务再升级</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/8/30/n11487701.md#1">勇警薛定岳因公殉职 彰县长慰问双亲</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/1/2/n11762786.md#1">黑鹰直升机失事 台参谋总长等8人罹难</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/6/9/n12173011.md#1">汉光演习713登场 联合兵种营首度投入操演</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/6/30/n12220978.md#1">国军汉光演习将至 F-16挂弹 潜舰射鱼雷轰敌</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/3/n12229282.md#1">汉光预演 陆战队胶筏惊传翻覆 1失踪2急救</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/7/6/n12236230.md#1">台陆战队覆艇意外 严德发：不因风险降低训练标准</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753402.md#1">局长颁发达人奖状与奖品给垃圾车小达人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753385.md#1">嘉县新增837人确诊 运动营养抗“疫”加分</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753374.md#1">嘉义市新增550例本土确诊案例</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752807.md#1">嘉义市新增552例本土确诊案例</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/17/n11326982.md#1" target="_blank">金言：香港反送中会引发“蝴蝶效应”？</a></li><li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/22/n11674273.md#1" target="_blank">身心俱悴时喜遇大法 印度母亲人生现转机</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/2/n11629364.md#1" target="_blank">139号囚犯——红色影星赵丹的凄惨人生</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/24/n11406694.md#1" target="_blank">美国会吁中共释放法轮功学员 邓翠苹女儿感谢</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/6/n12235421.md#1">大陆洪涝灾情严重 至少26省市1770万人受灾</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/6/n12236624.md#1">水灾 中共红会20天募2千 “人民觉醒了”</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/5/n12234416.md#1">闭关锁国？中共称“经济内循环”引热议</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/5/n12233438.md#1">【翻墙必看】北京卫戍区密件泄军方秘密</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/6/n12235128.md#1">狂搭车！柯文哲：1280月票有人搭到1万元</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/5/n12233623.md#1">美国巨星麦可杰克森转生到湖北工地？</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/5/n12234872.md#1">TVB祭加辣条款 郑敬基：前所未有的白色恐怖</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/5/n12234607.md#1">偶像剧导演杨冠玉骤逝 林依晨等艺人悼念</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/6/n12236838.md#1">浙江卫视高管爆巨额受贿 周冬雨受牵连挨轰</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/5/n12234410.md#1">出道18年获赞零负评 林依晨分享交友原则</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/6/n12237076.md#1">强制五个孩子戒“网瘾” 结果震惊妈妈</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/6/29/n12220541.md#1">【佳人传】最像林黛玉的江南才女叶小鸾</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/5/26/n12138633.md#1">【康熙大帝】北疆拒俄 永戍龙兴之地</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/7/5/n12233957.md#1">人在做天在看 谋财害命雷公怒</a></li>
-<li><a href="https://github.com/esmmnr3168/djy/blob/master/gb/20/6/30/n12221096.md#1">断舍离</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/esmmnr3168/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/esmmnr3168/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/7/n12238605.htm">张丽善慰问汉光演习殉职士兵蔡博宇家属</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/7/n12238605.htm">张丽善慰问汉光演习殉职士兵蔡博宇家属</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/esmmnr3168/djy/blob/master/gb/20/7/7/n12238605.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/esmmnr3168/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/esmmnr3168/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/esmmnr3168/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/esmmnr3168/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmmnr3168/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/7/7/n12238605.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
